# MatplotlibUtilities

./: README.md
src/matplotlib_utilities/: README.md  __init__.py  graph_axis.py  layout.py  maker.py  parameter.py  protocols.py  subparameter.py  table_axis.py
src/matplotlib_utilities/axis/: README.md  __init__.py  axis_ops.py
src/matplotlib_utilities/axis/parameters/: tick_params.py
src/matplotlib_utilities/draw/: README.md  __init__.py  drawing.py
src/matplotlib_utilities/draw/parameters/: __init__.py  annotate.py  arrow.py  colorbar.py  imshow.py  legend.py  line.py  plot.py  scatter.py
src/matplotlib_utilities/mixin/: __init__.py
src/matplotlib_utilities/mixin/axis/: __init__.py  mixin.py
src/matplotlib_utilities/mixin/draw/: __init__.py  mixin.py
src/matplotlib_utilities/subparameters/: README.md  __init__.py  base_class.py  colorbar.py  imshow.py  legend.py  line.py  plot.py  scatter.py  tick_params.py
src/matplotlib_utilities/subparameters/utils/: README.md  __init__.py  colorbar_extend.py  colorbar_spacing.py  interpolation.py  interpolation_stage.py  location.py  orientation.py
src/matplotlib_utilities/utils/: README.md  __init__.py  arrow_shape.py  aspect.py  color.py  color_map.py  color_types.py  linestyle.py  marker.py  origin.py  to_journal_format.py
src/matplotlib_utilities/utils/color/: __init__.py  color_map.py  color_types.py
tests/: conftest.py  test.py
typings/: README.md  pyproject.toml  requirements.txt
typings/mpl_toolkits/: __init__.pyi
typings/mpl_toolkits/axes_grid1/: __init__.pyi  axes_divider.pyi
(+32 files in other folders)
