[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib_utilities"
version = "0.0.1"
authors = [
  { name = "Ryuto Yoshida" },
]
description = "Small library wrapping common Matplotlib workflows: subplot layout, typed subparameter dataclasses, and a MatplotGraphMaker facade."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "color @ git+https://github.com/ry-yoshida-private/Color.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/ry-yoshida-private/MatplotlibUtilities"
"Bug Tracker" = "https://github.com/ry-yoshida-private/MatplotlibUtilities/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
matplotlib_utilities = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test.py", "test_*.py", "*_test.py"]
